[package]
name = "bedrock-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bedrockrs_core = { path = "crates/core" }
bedrockrs_shared = { path = "crates/shared" }

bedrockrs_nbt = { path = "crates/nbt" }

bedrockrs_proto = { path = "crates/proto", optional = true }
bedrockrs_proto_core = { path = "crates/proto_core", optional = true }
bedrockrs_proto_derive = { path = "crates/proto_derive", optional = true }

bedrockrs_addons = { path = "crates/addons", optional = true }

bedrockrs_form = { path = "crates/form" }

bedrockrs_world = { path = "crates/world", optional = true }
bedrockrs_paletted_storage = { path = "crates/paletted_storage", optional = true }

[features]
full = ["addons", "proto", "world"]

addons = ["dep:bedrockrs_addons"]
proto = ["dep:bedrockrs_proto", "dep:bedrockrs_proto_core", "dep:bedrockrs_proto_derive"]
world = ["dep:bedrockrs_world", "dep:bedrockrs_paletted_storage"]
