[package]
name = "bedrockrs_addons"
version = "0.1.0"
edition = "2021"

[dependencies]
bedrockrs_core = { path = "../core" }

uuid = { version = "1.8", features = ["serde"] }
semver = { version = "1.0", features = ["serde"] }
image = "0.25"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
