[package]
name = "bedrockrs_proto"
version = "0.1.0"
edition = "2021"

[dependencies]
bedrockrs_core = { path = "../core" }
bedrockrs_nbt = { path = "../nbt" }
bedrockrs_proto_core = { path = "../proto_core" }
bedrockrs_proto_derive = { path = "../proto_derive" }
bedrockrs_addons = { path = "../addons" }

thiserror = "1.0"
dyn-clone = "1.0"

jsonwebtoken = "9.3"
ring = { version = "0.17" }
rand = "0.8"
base64 = "0.22"
serde_json = "1.0"
rak-rs = { version = "0.3", default-features = false, features = ["async_tokio", "mcpe"] }
tokio = { version = "1.38", features = ["full"] }

flate2 = "1.0"
snap = "1.1"

num-traits = "0.2"
num-derive = "0.4"

x509-cert = "0.2"
