[package]
name = "proto_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bedrock_core = { path = "../bedrock_core" }
nbt = { path = "../nbt" }

thiserror = "1.0"
serde_json = "1.0"
jsonwebtoken = "9.3"
base64 = "0.22"
