[package]
name = "proto_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
bedrock_core = { path = "../bedrock_core" }
proto_core = { path = "../proto_core" }

proc-macro2 = "1.0"
syn = "2.0"
quote = "1.0"
