[package]
name = "serialize_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
bedrock_core = { path = "../bedrock_core" }
serialize = { path = "../serialize" }

proc-macro2 = "1.0.81"
syn = "2.0.60"
quote = "1.0.36"
bytes = "1.6.0"
