[package]
name = "bedrockrs_proto"
version = "0.1.0"
edition = "2021"

[dependencies]
bedrockrs_core = { path = "../core" }
bedrockrs_shared = { path = "../shared" }
bedrockrs_proto_core = { path = "../proto_core" }
bedrockrs_proto_macros = { path = "../proto_macros" }
bedrockrs_addon = { path = "../addon" }

nbtx = { git = "https://github.com/bedrock-crustaceans/nbtx" }

thiserror = "1.0"
dyn-clone = "1.0"

jsonwebtoken = "9.3"
ring = { version = "0.17" }
rand = "0.8"
base64 = "0.22"
uuid = { version = "1.10", features = ["v4"] }
serde_json = "1.0"
rak-rs = { version = "0.3", default-features = false, features = ["async_tokio", "mcpe"] }
tokio = { version = "1.38", features = ["full"] }

flate2 = "1.0"
snap = "1.1"

x509-cert = "0.2"

bitflags = "2.6.0"
