[package]
name = "bedrockrs_proto_core"
version = "0.1.0"
edition = "2021"

[dependencies]
bedrockrs_core = { path = "../core" }
bedrockrs_macros = { path = "../macros" }

nbtx = { git = "https://github.com/bedrock-crustaceans/nbtx" }
xuid = "1.0"

byteorder = "1.5"
varint-rs = "2.2"

thiserror = "1.0"
serde_json = "1.0"
jsonwebtoken = "9.3"
base64 = "0.22"
uuid = { version = "1.10", features = ["v4"] }
