[package]
name = "bedrockrs_server"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0"

bedrockrs_core = { path = "../core" }
bedrockrs_shared = { path = "../shared" }
bedrockrs_proto = { path = "../proto" }

tokio = { version = "1.40", features = ["full", "tracing"] }
shipyard = { version = "0.7", features = ["parallel", "proc", "rayon", "tracing"]}
rayon = "1.10"
vek = "0.17"

xuid = "1.0"

[features]
scoreboard = []
forms = []
visibility = []
