[package]
name = "bedrockrs_world"
version = "0.1.0"
edition = "2021"

[dependencies]
bedrockrs_core = { path = "../core" }
bedrockrs_shared = { path = "../shared" }

nbtx = { git = "https://github.com/bedrock-crustaceans/nbtx" }

mojang-leveldb = "0.7.0"
thiserror = "1.0"
byteorder = "1.5"
uuid = { version = "1.10", features = ["v4"] }
bytemuck = { version = "1.19.0", features = ["must_cast"] }
len-trait = "0.6.1"
anyhow = "1.0.93"
concat-idents = "1.1.5"
serde = "1.0.214"
optick = { version = "1.3.4", features = ["enable"] }
optick-attr = { version = "0.3.0", features = ["enable"] }
rusty-leveldb = "3.0.2"
miniz_oxide = "0.8.0"

[profile.release]
debug = true

[[test]]
name = "api_test"
required-features = ["default-impl"]

[features]
default-impl = []
