[package]
name = "bedrockrs_world"
version = "0.1.0"
edition = "2021"

[dependencies]
bedrockrs_core = { path = "../core" }
bedrockrs_shared = { path = "../shared" }
bedrockrs_paletted_storage = { path = "../paletted_storage" }

nbtx = { git = "https://github.com/bedrock-crustaceans/nbtx" }

mojang-leveldb = "0.6"
thiserror = "2.0"
byteorder = "1.5"
uuid = { version = "1.10", features = ["v4"] }
